fix: download cv wrapping on smaller screen

--- a/src/components/main/main.scss
+++ b/src/components/main/main.scss
@@ -19,6 +19,8 @@
 
             .hireCv {
                 display: flex;
+                flex-wrap: wrap;
+                row-gap: 20pxs;
                 column-gap: 22px;
 
                 .hireMe {
